# python-extension-benchmark

./: .dockerignore  .gitignore  BENCHMARK_COMMANDS.md  CHANGELOG.md  DOCKER_README.md  Dockerfile  Dockerfile.ffi  ERROR_HANDLING_SUMMARY.md  FFI_VS_MICROSERVICE.md  JULIA_SETUP.md  README.md  benchmark_results_summary_FFI.md  benchmark_results_summary_FFI_comprehensive.md  build_c_ext.py  build_cpp_ext.py  build_cython.py  build_fortran_ext.py  build_go_ext.py  build_julia_ext.py  build_rust_ext.py  build_zig_ext.py  check_results.py  demo_error_handling.py  docker-compose.ffi.yml  docker-compose.test.yml  docker-compose.yml  pytest.ini  reinstall_pycall.jl  requirements.txt  run_go_property_tests.py  run_julia_property_tests.py  setup_pycall.jl  task_8_3_completion_summary.md  test_julia_functions.jl  test_julia_property_direct.py  test_julia_structure.py  test_result_filtering.py  test_rust_integration.py  validate_julia_ext.py
.claude/: settings.local.json
audit/: Cargo.toml  build.rs  ffi_audit_integration.py
audit/proptest-regressions/: fallback_prevention.txt
audit/proptest-regressions/minimal_test_framework/: tests.txt
audit/src/: bug_detection.rs  bug_detection_test.rs  diagnostics.rs  error.rs  fallback_prevention.rs  fixer.rs  lib.rs  main.rs  minimal_test_framework.rs  reporter.rs  types.rs
audit/src/minimal_test_framework/: tests.rs
audit/tests/: integration_test.rs  property_test_contamination.proptest-regressions  property_test_contamination.rs  property_test_performance_improvement.rs  test_ffi_benchmark_validation.py  test_ffi_diagnostics.py  test_python_integration.py
benchmark/: README.md  conftest.py  interface.py  models.py  statistics.py
benchmark/cpp_ext/: CMakeLists.txt  README.md  __init__.py  memory.cpp  numeric.cpp  parallel.cpp  setup.py
docs/: API_REFERENCE.md  FFI_DOCKER_ANALYSIS_SUMMARY.md  FFI_SUMMARY_GENERATION.md  TUTORIAL.md  UV_ENVIRONMENT_SETUP_GUIDE.md  benchmark_extension_proposal.md  benchmark_proposal.md  benchmark_results_summary.md  benchmark_results_summary_FFI.md  benchmark_results_windows_ffi_20260307.md  development_record.md  fortran_benchmark_results.md  implementation_roadmap.md
release/: README.md  RELEASE_INFO.json  requirements.txt  setup.py
scripts/: README.md  (+1 more)
(+258 files in other folders)
